# ble-scan-qt

./: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/qtquickview/: BluetoothManager.cpp  BluetoothManager.h  CMakeLists.txt  HotspotBridge.cpp  HotspotBridge.h  Main.qml  P2pBridge.cpp  P2pBridge.h  TransportManager.cpp  TransportManager.h  main.cpp
app/src/main/java/com/example/qshare/: MainActivity.kt
app/src/main/java/com/example/qtquickview_kotlin/: Colors.kt  MainActivity.kt
app/src/main/java/io/bari/qshare/: HotspotManager.java  MainActivity.kt  P2pManager.java
app/src/main/res/drawable/: switch_thumb.xml  switch_track.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-hdpi/: dimens.xml
app/src/main/res/values-ldpi/: dimens.xml
app/src/main/res/values-xhdpi/: dimens.xml
app/src/main/res/values-xxhdpi/: dimens.xml
gradle/wrapper/: gradle-wrapper.properties
